--- a/assets/style.css
+++ b/assets/style.css
@@ -13,9 +13,13 @@ body, html {
   }
 
   /* Change navbar styling */
-.navbarstyle p {
+.navbarstyle {
     font-size: 30px;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
-    color: rgba(28, 59, 145, 0.986);
+    color: rgba(255, 255, 255, 0.986);
+}
+
+p, h1 {
+  color: rgba(255, 255, 255, 0.986);
 }
