--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@ body, html {
 /* Background image */
 .bg {
     background-image: url(./images/BG.jpg);
+    background-attachment: fixed;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
