--- a/assets/style.css
+++ b/assets/style.css
@@ -47,3 +47,54 @@ figure {
   position: relative;
   text-align: center;
 }
+
+@media screen and (max-width: 400px) {
+  .container {
+    width: 80px;
+    padding: 2px;
+  }
+
+  img {
+    width: 150px;
+    height: 150px;
+  }
+
+  article {
+    text-align: center;
+  }
+
+  .col-xs-12 {
+    position: relative;
+    align-items: center;
+  }
+
+  footer {
+    height: 10px;
+  }
+  
+  #page-footer {
+    height: 5px;
+  }
+  
+  a {
+    font-size: 10px;
+  }
+
+}
+
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 600px;
+    padding: 20px;
+  }
+
+  img {
+    width: 250px;
+    height: 250px;
+  }
+
+  a {
+    font-size: 20px;
+  }
+}
