--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,11 @@ p, h1, label {
   color: rgba(255, 255, 255, 0.986);
 }
 
+p {
+  font-size: 25px;
+  font-weight: bold;
+}
+
 footer {
   background-color: rgb(0, 0, 0);
   position: fixed;
@@ -76,10 +81,9 @@ figure {
     height: 5px;
   }
   
-  a {
+  a, p {
     font-size: 10px;
   }
-
 }
 
 
@@ -94,7 +98,8 @@ figure {
     height: 250px;
   }
 
-  a {
+  a, p {
     font-size: 20px;
   }
+
 }
